ci paths correction

--- a/.github/workflows/wdbreader.yml
+++ b/.github/workflows/wdbreader.yml
@@ -86,9 +86,9 @@ jobs:
       run: |
         cd ${{ github.workspace }}/wdbreader
         cmake -S . -B ./build -DCMAKE_DEBUG_POSTFIX=d -DCMAKE_INSTALL_PREFIX=./install -DBUILD_TESTING=ON -DBUILD_APPS=ON \
-          -DCatch2_DIR=${{ github.workspace }}/deps/catch2/install/lib/cmake/Catch2 \
-          -DCascLib_DIR=${{ github.workspace }}/deps/casclib/install/lib/cmake/CascLib \
-          -DStormLib_DIR=${{ github.workspace }}/deps/stormlib/install/share/StormLib \
+          -DCatch2_DIR='${{ github.workspace }}/deps/catch2/install/lib/cmake/Catch2' \
+          -DCascLib_DIR='${{ github.workspace }}/deps/casclib/install/lib/cmake/CascLib' \
+          -DStormLib_DIR='${{ github.workspace }}/deps/stormlib/install/share/StormLib' \
         cmake --build ./build --config Debug
 
     - name: test wdbreader debug
@@ -99,9 +99,9 @@ jobs:
       run: |
         cd ${{ github.workspace }}/wdbreader
         cmake -S . -B ./build -DCMAKE_DEBUG_POSTFIX=d -DCMAKE_INSTALL_PREFIX=./install -DBUILD_TESTING=OFF -DBUILD_APPS=ON \
-          -DCatch2_DIR=${{ github.workspace }}/deps/catch2/install/lib/cmake/Catch2 \
-          -DCascLib_DIR=${{ github.workspace }}/deps/casclib/install/lib/cmake/CascLib \
-          -DStormLib_DIR=${{ github.workspace }}/deps/stormlib/install/share/StormLib \
+          -DCatch2_DIR='${{ github.workspace }}/deps/catch2/install/lib/cmake/Catch2' \
+          -DCascLib_DIR='${{ github.workspace }}/deps/casclib/install/lib/cmake/CascLib' \
+          -DStormLib_DIR='${{ github.workspace }}/deps/stormlib/install/share/StormLib' \
         cmake --build ./build --config Release
 
     - name: build wdbreader package
