--- a/.github/workflows/wdbreader.yml
+++ b/.github/workflows/wdbreader.yml
@@ -39,7 +39,8 @@ jobs:
     - name: build wdbreader debug
       working-directory:  ${{ github.workspace }}/wdbreader
       run: >
-        cmake -B build-static -S . -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake -DBUILD_SHARED_LIBS=OFF 
+        cmake -B build-static -S . -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake 
+        -DVCPKG_TARGET_TRIPLET=x64-windows-static -DBUILD_SHARED_LIBS=OFF 
         -DCMAKE_DEBUG_POSTFIX=d -DCMAKE_INSTALL_PREFIX=./install-static -DBUILD_TESTING=ON -DBUILD_APPS=ON
         &&
         cmake --build build-static --config Debug
@@ -50,7 +51,8 @@ jobs:
     - name: build wdbreader release
       working-directory:  ${{ github.workspace }}/wdbreader
       run: >
-        cmake -B build-static -S . -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake -DBUILD_SHARED_LIBS=OFF 
+        cmake -B build-static -S . -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake 
+        -DVCPKG_TARGET_TRIPLET=x64-windows-static -DBUILD_SHARED_LIBS=OFF 
         -DCMAKE_DEBUG_POSTFIX=d -DCMAKE_INSTALL_PREFIX=./install-static -DBUILD_TESTING=OFF -DBUILD_APPS=ON
         &&
         cmake --build build-static --config Release
