--- a/.github/workflows/wdbreader.yml
+++ b/.github/workflows/wdbreader.yml
@@ -47,7 +47,7 @@ jobs:
         cmake --build build-static --config Debug
 
     - name: test wdbreader debug
-      run: ctest --output-on-failure --test-dir ${{ github.workspace }}/wdbreader/build-static
+      run: ctest --output-on-failure --test-dir ${{ github.workspace }}/wdbreader/build-static -C Debug
 
     - name: build wdbreader release
       working-directory:  ${{ github.workspace }}/wdbreader
